--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <meta name="description" content="Crypto ICO is a responsive modern &amp; clean cryptocurrency website landing page html with admin dashboard template , specially created for ICO Startup agencies and digital crypto currency investment website.">
+    <meta name="description" content="ICO Projesi">
     <meta name="keywords" content="crypto, ico, cryptocurrency, bitcoin, landing, admin, dashboard, template, modern, clean, responsive">
     <meta name="author" content="PIXINVENT">
-    <title>Crypto ICO - Cryptocurrency Website Landing Page HTML + Dashboard Template</title>
+    <title>ICO Projesi</title>
     <link rel="apple-touch-icon" href="https://pixinvent.com/demo/crypto-ico/theme-assets/images/ico/apple-icon-120.png">
     <link rel="shortcut icon" type="image/x-icon" href="theme-assets/images/ico/favicon.ico">
     <!--Google Fonts-->
@@ -31,7 +31,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- END Custom CSS-->
   </head>
-  <body class=" 1-column undefined  page-animated svg-wrapper" data-menu-open="hover" data-menu="">
+  <body class=" 1-column undefined  page-animated svg-wrapper" data-menu-open="hover" data-menu="" style="background-color:black;">
     <!-- Preloader | Comment below code if you don't want preloader-->
 <div id="loader-wrapper">
     <svg viewbox=" 0 0 512 512" id="loader">
